[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Martin <msmith3dart@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
rand = "0.7.0"
colored = "1.8.0"
wasm-bindgen = "0.2.51"

[dev-dependencies]
insta = "0.10.1"
