[package]
name = "minesweeper_wasm"
version = "0.1.0"
authors = ["Martin <msmith3dart@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.51"
minesweeper = {version = "*", path = "../"}

[build-dependencies]
wasm-bindgen = "0.2.51"
